# swagger/swagger.json
@@ -110,6 +110,38 @@
                 ],
                 "description": "get all applications",
                 "operationId": "ApiController.GetApplications",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "pageSize",
+                        "description": "Page Size",
+                        "type": "integer"
+                    },
+                    {
+                        "in": "query",
+                        "name": "p",
+                        "description": "Page Number",
+                        "type": "integer"
+                    },
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Field",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortField",
+                        "description": "Sort Field",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortOrder",
+                        "description": "Sort Order: asc,desc",
+                        "type": "string"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "The Response object",
@@ -135,7 +167,7 @@
                         "description": "The details of the application",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/object.Application"
+                            "$ref": "#/definitions/object.AddApplicationInfo"
                         }
                     }
                 ],
@@ -158,10 +190,45 @@
                     {
                         "in": "body",
                         "name": "body",
+                        "description": "application.name 列表",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/object.DeleteApplicationParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The Response object",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/coral/api/applications/{appId}": {
+            "put": {
+                "tags": [
+                    "Application API"
+                ],
+                "description": "update an application",
+                "operationId": "ApiController.UpdateApplication",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "appId",
+                        "description": "The id ( owner/name ) of the application",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
                         "description": "The details of the application",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/object.Application"
+                            "$ref": "#/definitions/object.AddApplicationInfo"
                         }
                     }
                 ],
@@ -250,61 +317,6 @@
                         "description": "The Response object",
                         "schema": {
                             "$ref": "#/definitions/object.Group"
-                        }
-                    }
-                }
-            }
-        },
-        "/coral/api/get-organization-applications": {
-            "get": {
-                "tags": [
-                    "Application API"
-                ],
-                "description": "get the detail of the organization's application",
-                "operationId": "ApiController.GetOrganizationApplications",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "organization",
-                        "description": "The organization name",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The Response object",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/object.Application"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/coral/api/get-user-application": {
-            "get": {
-                "tags": [
-                    "Application API"
-                ],
-                "description": "get the detail of the user's application",
-                "operationId": "ApiController.GetUserApplication",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "id",
-                        "description": "The id ( owner/name ) of the user",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The Response object",
-                        "schema": {
-                            "$ref": "#/definitions/object.Application"
                         }
                     }
                 }
@@ -469,11 +481,11 @@
         }
     },
     "definitions": {
-        "197340.\u003cnil\u003e.string": {
+        "199806.\u003cnil\u003e.string": {
             "title": "string",
             "type": "object"
         },
-        "197398.string.string": {
+        "199864.string.string": {
             "title": "string",
             "type": "object"
         },
@@ -731,6 +743,90 @@
                 },
                 "user": {
                     "type": "string"
+                }
+            }
+        },
+        "object.AddApplicationInfo": {
+            "title": "AddApplicationInfo",
+            "type": "object",
+            "properties": {
+                "description": {
+                    "description": "应用描述",
+                    "type": "string",
+                    "example": "A great application"
+                },
+                "displayName": {
+                    "description": "应用名称",
+                    "type": "string",
+                    "example": "Casdoor"
+                },
+                "expireInHours": {
+                    "description": "Token过期时间（小时）",
+                    "type": "integer",
+                    "example": 168,
+                    "format": "int64"
+                },
+                "footerHtml": {
+                    "description": "页脚HTML",
+                    "type": "string",
+                    "example": "\u003cp\u003eFooter\u003c/p\u003e"
+                },
+                "formCss": {
+                    "description": "表单CSS",
+                    "type": "string",
+                    "example": "body { color: red; }"
+                },
+                "formCssMobile": {
+                    "description": "移动端表单CSS",
+                    "type": "string",
+                    "example": "body { color: blue; }"
+                },
+                "formOffset": {
+                    "description": "表单偏移量",
+                    "type": "integer",
+                    "example": 2,
+                    "format": "int64"
+                },
+                "formSideHtml": {
+                    "description": "表单侧边HTML",
+                    "type": "string",
+                    "example": "\u003cdiv\u003eSide\u003c/div\u003e"
+                },
+                "homepageUrl": {
+                    "description": "应用首页URL",
+                    "type": "string",
+                    "example": "https://casdoor.org"
+                },
+                "logo": {
+                    "description": "应用Logo",
+                    "type": "string",
+                    "example": "https://cdn.casdoor.com/logo.png"
+                },
+                "organization": {
+                    "description": "所属组织，非内置平台管理此字段无效",
+                    "type": "string",
+                    "example": "built-in"
+                },
+                "signinHtml": {
+                    "description": "登录页面HTML",
+                    "type": "string",
+                    "example": "\u003chtml\u003e...\u003c/html\u003e"
+                },
+                "signupHtml": {
+                    "description": "注册页面HTML",
+                    "type": "string",
+                    "example": "\u003chtml\u003e...\u003c/html\u003e"
+                },
+                "tags": {
+                    "description": "应用标签",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "themeData": {
+                    "$ref": "#/definitions/object.any",
+                    "description": "主题数据"
                 }
             }
         },
@@ -1174,6 +1270,19 @@
                 },
                 "type": {
                     "type": "string"
+                }
+            }
+        },
+        "object.DeleteApplicationParams": {
+            "title": "DeleteApplicationParams",
+            "type": "object",
+            "properties": {
+                "applications": {
+                    "description": "需要商城应用 name 列表",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -3623,7 +3732,7 @@
             "type": "object",
             "properties": {
                 "aliases": {
-                    "$ref": "#/definitions/197340.\u003cnil\u003e.string"
+                    "$ref": "#/definitions/199806.\u003cnil\u003e.string"
                 },
                 "links": {
                     "type": "array",
@@ -3632,7 +3741,7 @@
                     }
                 },
                 "properties": {
-                    "$ref": "#/definitions/197398.string.string"
+                    "$ref": "#/definitions/199864.string.string"
                 },
                 "subject": {
                     "type": "string"
